# nostr_relay

./: CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg
config/: config.yaml
docs/: CHANGELOG.md  authentication.md  building.md  dynamic_lists.md  foaf.md  fulltext.md  lmdb.md  performance.md  rate_limits.md  storage.md
nostr_relay/: __init__.py  alembic.ini  auth.py  cli.py  config.py  config.yaml  db.py  dynamic_lists.py  errors.py  event.py  foaf.py  monkeypatch.py  notifier.py  purple.py  rate_limiter.py  util.py  validators.py  verification.py  web.py
nostr_relay/alembic/: env.py
nostr_relay/alembic/versions/: 63a13fc870a3_add_indexes.py  e748549d8d91_initial_tables.py  fb1b3b1247a1_migrate_old_data.py
nostr_relay/recipe/: homeserver.py
nostr_relay/storage/: __init__.py  base.py  db.py  kv.py
test/: __init__.py  test_auth.py  test_config.yaml  test_kv.py  test_lists.py  test_main.py  test_rate_limiter.py  test_validators.py  test_verification.py
