[metadata]
name = nostr_relay
version = attr: nostr_relay.__version__
author = Dave St.Germain
author_email = dave@st.germa.in
url = https://code.pobblelabs.org/fossil/nostr_relay
description = nostr relay
long_description = file: README.md
long_description_content_type = text/markdown
keywords = protocol
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    falcon
    aiosqlite
    python-rapidjson
    secp256k1
    uvicorn[standard]

[options.entry_points]
console_scripts = 
    nostr-relay = nostr_relay.cli:main
