[metadata]
name = nostr_relay
version = attr: nostr_relay.__version__
author = Dave St.Germain
author_email = dave@st.germa.in
url = https://code.pobblelabs.org/fossil/nostr_relay
description = nostr relay
long_description = file: README.md
long_description_content_type = text/markdown
keywords = protocol
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: System Administrators
    Operating System :: OS Independent
    Topic :: Internet :: WWW/HTTP
    
[options]
python_requires = >=3.9
packages = nostr_relay,nostr_relay.storage,nostr_relay.recipe
zip_safe = True
include_package_data = True
install_requires =
    falcon
    python-rapidjson; platform_python_implementation=="CPython"
    aionostr>=0.19.0
    sqlalchemy[asyncio]>=2.0
    aiosqlite>=0.18.0
    aiohttp[speedups]
    uvicorn[standard]
    gunicorn
    setproctitle
    alembic
    pydantic>2.0
    async-timeout; python_version < "3.11.0"
    wsproto; platform_python_implementation!="CPython"

[options.entry_points]
console_scripts = 
    nostr-relay = nostr_relay.cli:main

[options.extras_require]
test =
    pytest
    pytest-cov
    pytest-asyncio
    pytest-xdist
postgres =
    asyncpg
lmdb =
    lmdb
    msgpack
    whoosh
